--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="grid-x">
 
       <h2  class="cell large-offset-6 large-12">Duis mollis, est non commodo luctus, nisi erat porttito</h2>
-      <p>Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
+      <p class="cell large-offset-5 large-14">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
         varius blandit sit amet non magna. Aenean lacinia bibendum nulla
         sed consectetur. Fusce dapibus, tellus ac cursus commodo, tortor
         mauris.</p>
@@ -33,6 +33,31 @@
   </body>
 
 
+
+  <section>
+      <div class="scroll-menu">
+          <div class="can">
+              <img class="reveal-portfolio" src="assets/can1.png">
+              <button type="button" name="button">BUY</button>
+          </div>
+          <div class="can">
+              <img class="reveal-portfolio" src="assets/can2.png">
+              <button type="button" name="button">BUY</button>
+          </div>
+          <div class="can">
+              <img class="reveal-portfolio" src="assets/can3.png">
+              <button type="button" name="button">BUY</button>
+          </div>
+          <div class="can">
+              <img class="reveal-portfolio" src="assets/can4.png">
+              <button type="button" name="button">BUY</button>
+          </div>
+          <div class="can">
+              <img class="reveal-portfolio" src="assets/can5.png">
+              <button type="button" name="button">BUY</button>
+          </div>
+      </div>
+  </section>
 
 
 
