keep on keepin on
i did a button

--- a/index.html
+++ b/index.html
@@ -35,26 +35,27 @@
 
 
   <section>
+    <img class='cloud-thing' src="assets/cloud.png"></img>
       <div class="scroll-menu">
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can1.png">
-              <button type="button" name="button">BUY</button>
+              <img class="reveal-portfolio" src="assets/can1.png"><br>
+              <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can2.png">
-              <button type="button" name="button">BUY</button>
+              <img class="reveal-portfolio" src="assets/can2.png"><br>
+              <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can3.png">
-              <button type="button" name="button">BUY</button>
+              <img class="reveal-portfolio" src="assets/can3.png"><br>
+              <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can4.png">
-              <button type="button" name="button">BUY</button>
+              <img class="reveal-portfolio" src="assets/can4.png"><br>
+              <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can5.png">
-              <button type="button" name="button">BUY</button>
+              <img class="reveal-portfolio" src="assets/can1.png"><br>
+              <button type="button" name="button">BUY NOW</button>
           </div>
       </div>
   </section>
