start  mobile grid
we startin shit but we aint finishin it

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Sixpoint Brewery Virtual Mosaic Powered by Luster">
     <link rel='icon'  type='image/png' source='/favicon.png'>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@800&display=swap" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   </head>
@@ -14,18 +15,18 @@
 
   <body>
     <div class="grid-x top-page">
-      <img class="cell large-offset-11 large-2" src="assets/sixpoint-logo.png"></img>
+      <img class="cell large-offset-11 large-2 small-offset-9 small-6" src="assets/sixpoint-logo.png"></img>
     </div>
     <div class="grid-x top-page">
-      <iframe class="cell large-offset-3 large-18" src="https://luster.cc/digimo/?mosaic=777&hash=cherrytest"></iframe>
+      <iframe class="cell large-offset-2 large-20 small-offset-1 small-22" src="https://luster.cc/digimo/?mosaic=777&hash=cherrytest"></iframe>
     </div>
     <img class="header-image" src="assets/header-img.png"></img>
 
 
     <div class="grid-x">
 
-      <h2  class="cell large-offset-6 large-12">Duis mollis, est non commodo luctus, nisi erat porttito</h2>
-      <p class="cell large-offset-5 large-14">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
+      <h2  class="cell large-offset-6 large-12 small-offset-2 small-20">Duis mollis, est non commodo luctus, nisi erat porttito</h2>
+      <p class="cell large-offset-5 large-14 small-offset-2 small-20">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
         varius blandit sit amet non magna. Aenean lacinia bibendum nulla
         sed consectetur. Fusce dapibus, tellus ac cursus commodo, tortor
         mauris.</p>
