--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel='icon'  type='image/png' source='/favicon.png'>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap" rel="stylesheet">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   </head>
@@ -17,7 +18,7 @@
     <div class="grid-x top-page">
       <img class="cell large-offset-11 large-2 small-offset-9 small-6" src="assets/sixpoint-logo.png"></img>
     </div>
-    <div class="grid-x top-page">
+    <div class="grid-x top-page resp-container">
       <iframe class="cell large-offset-2 large-20 small-offset-1 small-22" src="https://luster.cc/digimo/?mosaic=777&hash=cherrytest"></iframe>
     </div>
     <img class="header-image" src="assets/header-img.png"></img>
