center  buttons, change beer
cooler beers, cooler buttons

--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
     <img class='cloud-thing' src="assets/cloud.png"></img>
       <div class="scroll-menu">
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can1.png"><br>
+              <img class="first" src="assets/beer_atomic.png"><br>
               <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can2.png"><br>
+              <img  src="assets/beer_banana.png"><br>
               <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can3.png"><br>
+              <img src="assets/beer_brevity.png"><br>
               <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can4.png"><br>
+              <img src="assets/beer_escape.png"><br>
               <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
-              <img class="reveal-portfolio" src="assets/can1.png"><br>
+              <img  src="assets/beer_fire.png"><br>
               <button type="button" name="button">BUY NOW</button>
           </div>
       </div>
