Fix can animations
wow good job

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img class="cell large-offset-11 large-2 small-offset-9 small-6" src="assets/sixpoint-logo.png"></img>
     </div>
     <div class="grid-x top-page resp-container">
-      <iframe class="cell large-offset-2 large-20 small-offset-1 small-22" src="https://luster.cc/digimo/?mosaic=777&hash=cherrytest"></iframe>
+      <iframe class="cell large-offset-2 large-20 small-offset-2 small-20" src="https://luster.cc/digimo/?mosaic=777&hash=cherrytest"></iframe>
     </div>
     <img class="header-image" src="assets/header-img.png"></img>
 
@@ -37,7 +37,7 @@
 
 
   <section>
-    <img class='cloud-thing' src="assets/cloud.png"></img>
+      <img class='cloud-thing' src="assets/cloud.png"></img>
       <div class="scroll-menu">
           <div class="can">
               <img class="first" src="assets/beer_atomic.png"><br>
@@ -62,7 +62,9 @@
       </div>
   </section>
 
+  <section class='footer'>
 
+  </section>
 
 
 
