--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="grid-x">
 
       <h2  class="cell large-offset-6 large-12 small-offset-2 small-20">Duis mollis, est non commodo luctus, nisi erat porttito</h2>
-      <p class="cell large-offset-5 large-14 small-offset-2 small-20">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
+      <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
         varius blandit sit amet non magna. Aenean lacinia bibendum nulla
         sed consectetur. Fusce dapibus, tellus ac cursus commodo, tortor
         mauris.</p>
@@ -63,7 +63,9 @@
   </section>
 
   <section class='footer'>
-
+    <p>Sponsored By:</p>
+    <a href="luster.cc">
+    <img  src="assets/luster-logo.svg"></img></a>
   </section>
 
 
