Drop Shadow to animation
drop shadow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
   </head>
 
 
@@ -37,7 +38,7 @@
 
 
   <section>
-      <img class='cloud-thing' src="assets/cloud.png"></img>
+      <!-- <img class='cloud-thing' src="assets/cloud.png"></img> -->
       <div class="scroll-menu">
           <div class="can">
               <img class="first" src="assets/beer_atomic.png"><br>
