--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- <img class='cloud-thing' src="assets/cloud.png"></img> -->
       <div class="scroll-menu">
           <div class="can">
-              <img class="first" src="assets/beer_atomic.png"><br>
+              <img src="assets/beer_atomic.png"><br>
               <button type="button" name="button">BUY NOW</button>
           </div>
           <div class="can">
