--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <section class='footer'>
     <p>Sponsored By:</p>
-    <a href="luster.cc">
+    <a href="https://luster.cc/">
     <img  src="assets/luster-logo.svg"></img></a>
   </section>
 
