Update mosaic but break  responsive
win  some you lose some

--- a/index.html
+++ b/index.html
@@ -16,60 +16,62 @@
 
 
   <body>
-    <div class="grid-x top-page">
-      <img class="cell large-offset-11 large-2 small-offset-9 small-6" src="assets/sixpoint-logo.png"></img>
-    </div>
-    <div class="grid-x top-page resp-container">
-      <iframe class="cell large-offset-2 large-20 small-offset-2 small-20" src="https://luster.cc/digimo/?mosaic=777&hash=cherrytest"></iframe>
-    </div>
-    <img class="header-image" src="assets/header-img.png"></img>
+    <div class='container'>
 
-
-    <div class="grid-x">
-
-      <h2  class="cell large-offset-6 large-12 small-offset-2 small-20">Duis mollis, est non commodo luctus, nisi erat porttito</h2>
-      <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
-        varius blandit sit amet non magna. Aenean lacinia bibendum nulla
-        sed consectetur. Fusce dapibus, tellus ac cursus commodo, tortor
-        mauris.</p>
-        </div>
-  </body>
-
-
-
-  <section>
-      <!-- <img class='cloud-thing' src="assets/cloud.png"></img> -->
-      <div class="scroll-menu">
-          <div class="can">
-              <img src="assets/beer_atomic.png"><br>
-              <button type="button" name="button">BUY NOW</button>
-          </div>
-          <div class="can">
-              <img  src="assets/beer_banana.png"><br>
-              <button type="button" name="button">BUY NOW</button>
-          </div>
-          <div class="can">
-              <img src="assets/beer_brevity.png"><br>
-              <button type="button" name="button">BUY NOW</button>
-          </div>
-          <div class="can">
-              <img src="assets/beer_escape.png"><br>
-              <button type="button" name="button">BUY NOW</button>
-          </div>
-          <div class="can">
-              <img  src="assets/beer_fire.png"><br>
-              <button type="button" name="button">BUY NOW</button>
-          </div>
+      <div class="grid-x top-page">
+        <img class="cell large-offset-11 large-2 small-offset-9 small-6" src="assets/sixpoint-logo.png"></img>
       </div>
-  </section>
-
-  <section class='footer'>
-    <p>Sponsored By:</p>
-    <a href="https://luster.cc/">
-    <img  src="assets/luster-logo.svg"></img></a>
-  </section>
+      <div class="grid-x top-page resp-container">
+        <iframe class="cell large-offset-2 large-20 small-offset-2 small-20" src="https://luster.cc/digimo/?mosaic=1305"></iframe>
+      </div>
+      <img class="header-image" src="assets/header-img.png"></img>
 
 
+      <div class="grid-x">
+
+        <h2  class="cell large-offset-6 large-12 small-offset-2 small-20">Duis mollis, est non commodo luctus, nisi erat porttito</h2>
+        <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
+          varius blandit sit amet non magna. Aenean lacinia bibendum nulla
+          sed consectetur. Fusce dapibus, tellus ac cursus commodo, tortor
+          mauris.</p>
+      </div>
+
+
+
+    <section>
+        <img class='cloud-thing' src="assets/clouds.png"></img>
+        <div class="scroll-menu">
+            <div class="can">
+                <img src="assets/beer_atomic.png"><br>
+                <button type="button" name="button">BUY NOW</button>
+            </div>
+            <div class="can">
+                <img  src="assets/beer_banana.png"><br>
+                <button type="button" name="button">BUY NOW</button>
+            </div>
+            <div class="can">
+                <img src="assets/beer_brevity.png"><br>
+                <button type="button" name="button">BUY NOW</button>
+            </div>
+            <div class="can">
+                <img src="assets/beer_escape.png"><br>
+                <button type="button" name="button">BUY NOW</button>
+            </div>
+            <div class="can">
+                <img  src="assets/beer_fire.png"><br>
+                <button type="button" name="button">BUY NOW</button>
+            </div>
+        </div>
+    </section>
+
+    <section class='footer'>
+      <p>Sponsored By:</p>
+      <a href="https://luster.cc/">
+      <img  src="assets/luster-logo.svg"></img></a>
+    </section>
+
+  </div>
+  </body>
 
 
 
