fix some of the broken stuff
wow that was hard

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     <div class='container'>
 
       <div class="grid-x top-page">
-        <img class="cell large-offset-11 large-2 small-offset-9 small-6" src="assets/sixpoint-logo.png"></img>
+        <img class="cell large-offset-11 large-2 small-offset-10 small-4" src="assets/sixpoint-logo.png"></img>
       </div>
-      <div class="grid-x top-page resp-container">
-        <iframe class="cell large-offset-2 large-20 small-offset-2 small-20" src="https://luster.cc/digimo/?mosaic=1305"></iframe>
+      <div class='framing-container'>
+        <div class=" top-page resp-container">
+          <!-- <iframe class="cell large-offset-2 large-20 small-offset-2 small-20" src="https://luster.cc/digimo/?mosaic=1305"></iframe> -->
+          <iframe class='responsive-iframe' src="https://luster.cc/digimo/?mosaic=1305"></iframe>
+        </div>
       </div>
       <img class="header-image" src="assets/header-img.png"></img>
 
@@ -36,14 +39,6 @@
           mauris.</p>
       </div>
 
-<<<<<<< HEAD
-=======
-  <section class='footer'>
-    <p>Sponsored By:</p>
-    <a href="luster.cc">
-    <img  src="assets/luster-logo.svg"></img></a>
-  </section>
->>>>>>> parent of 3366c6d... fix link
 
 
     <section>
