--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-    <section>
+    <section class="bottom-section">
         <img class='cloud-thing' src="assets/clouds.png"></img>
         <div class="gallery">
             <div class="can">
@@ -73,6 +73,7 @@
           <script>
 
     $('.gallery').slick({
+      // accessibility: true;
         dots: false,
         arrows: false,
         infinite: true,
