--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class='container'>
 
       <div class="grid-x top-page">
-        <img class="cell large-offset-11 large-2 small-offset-10 small-4" src="assets/sixpoint-logo.png"></img>
+        <img class="cell large-offset-10 large-4 small-offset-10 small-4" src="assets/sixpoint-logo.png"></img>
       </div>
       <div class='framing-container'>
         <div class=" top-page resp-container">
@@ -28,7 +28,9 @@
           <iframe class='responsive-iframe' src="https://luster.cc/digimo/?mosaic=1305"></iframe>
         </div>
       </div>
-      <img class="header-image" src="assets/header-img.png"></img>
+      <div class='image-container'>
+        <img class="header-image" src="assets/header-img.png"></img>
+      </div>
 
 
       <div class="grid-x">
