--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   </script>
 
     <section class='footer'>
-      <p>Sponsored By:</p>
+      <p>Powered By:</p>
       <a href="https://luster.cc/">
       <img  src="assets/luster-logo.svg"></img></a>
     </section>
