--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class='framing-container'>
         <div class=" top-page resp-container">
           <!-- <iframe class="cell large-offset-2 large-20 small-offset-2 small-20" src="https://luster.cc/digimo/?mosaic=1305"></iframe> -->
-          <iframe class='responsive-iframe' src="https://luster.cc/digimo/?mosaic=1305"></iframe>
+          <iframe class='responsive-iframe' src="https://luster.cc/digimo/?mosaic=1305&hash=sixpoint"></iframe>
         </div>
       </div>
       <div class='image-container'>
