--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
       <div class='image-container'>
         <img class="header-image" src="assets/header-img.png"></img>
       </div>
-
-
       <div class="grid-x">
-
-        <h2  class="cell large-offset-6 large-12 small-offset-2 small-20">Duis mollis, est non commodo luctus, nisi erat porttito</h2>
-        <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">Maecenas faucibus mollis interdum. Maecenas sed diam eget risus
-          varius blandit sit amet non magna. Aenean lacinia bibendum nulla
-          sed consectetur. Fusce dapibus, tellus ac cursus commodo, tortor
-          mauris.</p>
+        <h2  class="cell large-offset-6 large-12 small-offset-2 small-20">
+            Thousands of moments.<br />
+            Countless cans.<br />
+            One work of art. </h2>
+        <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">
+          Some people crack one open with their spouse. Some hide out from the
+          roommate they can’t escape. Some toast their cat while sipping in
+          their skivvies. But no matter their can of choice, place on the map,
+          or company (or lack thereof), this Sixpoint toast can be seen around
+          the world.
+        </p>
       </div>
-
-
-
 
     <section class="bottom-section">
         <img class='cloud-thing' src="assets/clouds.png"></img>
