--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Sixpoint Brewery Virtual Mosaic</title>
     <link rel="stylesheet" type="text/css" href="css/client-page.css">
     <link rel="stylesheet" href="css/foundation.css">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="description" content="Sixpoint Brewery Virtual Mosaic Powered by Luster">
     <link rel='icon'  type='image/png' source='/favicon.png'>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -20,29 +21,31 @@
   <body>
     <div class='container'>
 
-      <div class="grid-x top-page">
-        <img class="cell large-offset-10 large-4 small-offset-10 small-4" src="assets/sixpoint-logo.png"></img>
+      <div class="grid-x top-page z1">
+        <div class="cell large-offset-10 large-4 small-offset-10 small-4">
+          <img src="assets/sixpoint-logo.png" />
+        </div>
       </div>
       <div class='framing-container'>
-        <div class=" top-page resp-container">
+        <div class="resp-container z1">
           <!-- <iframe class="cell large-offset-2 large-20 small-offset-2 small-20" src="https://luster.cc/digimo/?mosaic=1305"></iframe> -->
-          <iframe class='responsive-iframe' src="https://luster.cc/digimo/?mosaic=1336&hash=sixpoint"></iframe>
+          <iframe frameborder="0" class='responsive-iframe' src="https://luster.cc/digimo/?mosaic=1336&hash=sixpoint"></iframe>
         </div>
       </div>
       <div class='image-container'>
         <img class="header-image" src="assets/header-img.png"></img>
       </div>
       <div class="grid-x">
-        <h2  class="cell large-offset-6 large-12 small-offset-2 small-20">
+        <h2  class="cell large-offset-6 large-12 small-24">
             Thousands of moments.<br />
             Countless cans.<br />
             One work of art. </h2>
         <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">
           Some people crack one open with their spouse. Some hide out from the
-          roommate they can’t escape. Some toast their cat while sipping in
-          their skivvies. But no matter their can of choice, place on the map,
-          or company (or lack thereof), this Sixpoint toast can be seen around
-          the world.
+          roommatethey can’t escape. Some toast their cat while sipping in their
+          skivvies. It’s no doubt that Sixpoint cans get noticed, but no matter
+          your place on the map, company (or lack thereof) share your photos to
+          help reveal our latest can art.
         </p>
       </div>
 
