Spacing and background image fixes

--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
       <!-- <div class='image-container'>
         <img class="header-image" src=""></img>
       </div> -->
-      <div class="grid-x">
-        <h2  class="cell large-offset-6 large-12 small-24">
-            Thousands of moments.<br />
-            Countless cans.<br />
-            One work of art. </h2>
-        <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">
-          Some people crack one open with their spouse. Some hide out from the
-          roommate they can’t escape. Some toast their cat while sipping in their
-          skivvies. It’s no doubt that Sixpoint cans get noticed, but no matter
-          your place on the map, company (or lack thereof) share your photos to
-          help reveal our latest can art.
-        </p>
+      <section class="middle-section">
+        <div class="grid-x">
+          <h2  class="cell large-offset-6 large-12 small-24">
+              Thousands of moments.<br />
+              Countless cans.<br />
+              One work of art. </h2>
+          <p class="cell large-offset-5 large-14 small-offset-2 small-20 bottomp">
+            Some people crack one open with their spouse. Some hide out from the
+            roommate they can’t escape. Some toast their cat while sipping in their
+            skivvies. It’s no doubt that Sixpoint cans get noticed, but no matter
+            your place on the map, company (or lack thereof) share your photos to
+            help reveal our latest can art.
+          </p>
+        </div>
       </div>
 
     <section class="bottom-section">
@@ -142,6 +144,8 @@
     </section>
 
   </div>
+
+
   </body>
 
 
